[package]
name = "decodetx"
version = "0.1.0"
authors = ["lvqinghao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hex = "1.0"
ethereum-types = "0.8.0"
rlp = "0.4.0"
parity-crypto = { version = "0.4.2", features = ["publickey"] }
keccak-hash = "0.4.0"
##parity-bytes = "0.1"
unexpected = { path = "util/unexpected" }

[dev-dependencies]
rustc-hex = "1.0"


